# ollamaagent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
analytics/: __init__.py  debate_analytics.py
council/: chroma_memory.py  cli.py  clients.py  collaboration_mode.py  consciousness.py  debate_formats.py  dynamic_agents.py  engine.py  enhanced_memory.py  focus_scorer.py  interactive.py  memory.py  personalities.py  rag_system.py  roles.py  storage.py  types.py
debates/: 20251110_103749_pengahruh_makana_hidup_dalam_kehidupan.md  20251110_111600_Debate.md  20251110_114440_tuhan.md  20251110_122533_Debate.json  20251110_122953_Debate.json  20251110_123028_Debate.json  20251110_163459_kenapa_tuhan_menciptakan_surga_dan_neraka.json  20251110_164634_kenapa_tuhan_menciptakan_surga_dan_neraka.json  20251110_164658_kenapa_tuhan_menciptakan_surga_dan_neraka.json
docs/: council_of_consciousness.md
memory/enhanced_chroma/: chroma.sqlite3
web/: server.py
web/templates/: dashboard.html  dashboard_v2.html
