[project]
name = "ollama-agent"
version = "0.3.0"
description = "Advanced multi-agent debate system with dynamic agents, collaboration mode, multiple formats, and interactive features"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "langfuse>=2.44.0",
  "openai>=1.53.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.9.2",
  "typer>=0.12.5",
  "rich>=13.9.2",
  "chromadb>=0.4.22",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "websockets>=12.0",
  "jinja2>=3.1.2",
  "networkx>=3.2",
  "matplotlib>=3.8.0",
  "pandas>=2.1.0",
  "plotly>=5.18.0",
]

[tool.uv]
dev-dependencies = []


